<resources>
    <string name="app_name">AndroidApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="recipes_title">Recipes</string>
    <string name="recipes_filter">Recipes Filter</string>
    <string name="inventory_title">Inventory</string>
    <string name="shopping_list_title">Shopping List</string>
    <string name="analytics_title">Analytics</string>
    <string name="account_title">Account</string>
    <string name="add_inventory_item">Add</string>
    <string name="recipe_suggestion_text">Based on your inventory...</string>
    <string name="searchbar_hint">Recipe names</string>
    <string name="auth_greeting">The go-to app to minimize your food waste and get delicious recipes out of your inventory.</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="register_hint">Don\'t have an account? <u>Sign up here!</u></string>
    <string name="register_password">Password <b>(min 8 characters)</b></string>
    <string name="sign_in_hint">Already have an account? <u>Sign in here!</u></string>
    <string name="register_username">Username <b>(min 3 characters)</b></string>
    <string name="username">Username</string>
    <string name="verification_code">Verification code</string>
    <string name="capture_image">Capture</string>
    <string name="success_toast">Receipt has successfully been parsed</string>
    <string name="warning_toast">Receipt not successfully parsed</string>
    <string name="select">Select</string>
    <string name="add_to_inventory">Add to Inventory</string>
    <string name="delete">Delete</string>
    <string name="add_item">Add Item</string>
    <string name="add_items">Add Items</string>
    <string name="scan_items">Scan Items</string>
    <string name="remove_items">Remove Selected</string>
    <string name="edit_items">Edit Selected</string>
    <string name="item_name">Name</string>
    <string name="item_unit">Unit</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_purchase_date">Purchase Date</string>
    <string name="item_expiry">Expiry Date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>