<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    tools:context=".FragmentRecipes" tools:layout_editor_absoluteX="5dp" tools:layout_editor_absoluteY="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_item_name" android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp" android:text="@string/item_name"
                android:textColor="#000" android:textSize="18sp" android:textStyle="bold"/>

            <EditText android:id="@+id/edit_item_name"
                      android:layout_width="171dp"
                      android:layout_height="match_parent"
                      android:layout_alignParentRight="true"
                      android:layout_toRightOf="@+id/item_name"
                      android:inputType="text"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_item_quantity" android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp" android:text="@string/item_quantity"
                android:textColor="#000" android:textSize="18sp" android:textStyle="bold"/>

            <EditText android:id="@+id/edit_item_quantity"
                      android:layout_width="106dp"
                      android:layout_height="match_parent"
                      android:layout_alignParentRight="true"
                      android:layout_toRightOf="@+id/item_quantity"
                      android:inputType="text"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp">
            <TextView
                android:id="@+id/item_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_item_unit" android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp" android:layout_marginRight="100dp"
                android:text="@string/item_unit" android:textColor="#000" android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText android:id="@+id/edit_item_unit"
                      android:layout_width="141dp"
                      android:layout_height="match_parent"
                      android:layout_alignParentRight="true"
                      android:layout_toRightOf="@+id/item_unit"
                      android:inputType="text"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/item_purchase_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_item_purchase_date" android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:text="@string/item_purchase_date"
                android:textColor="#000" android:textSize="18sp" android:textStyle="bold"/>

            <EditText android:id="@+id/edit_item_purchase_date"
                      android:layout_width="158dp"
                      android:layout_height="match_parent"
                      android:layout_alignParentRight="true"
                      android:layout_toRightOf="@+id/item_purchase_date"
                      android:inputType="text"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp">
            <TextView
                android:id="@+id/item_expiry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_item_expiry_date" android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp" android:text="@string/item_expiry"
                android:textColor="#000" android:textSize="18sp" android:textStyle="bold"/>

            <EditText android:id="@+id/edit_item_expiry_date"
                      android:layout_width="158dp"
                      android:layout_height="match_parent"
                      android:layout_alignParentRight="true"
                      android:layout_toRightOf="@+id/item_expiry_date"
                      android:inputType="text"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="#267bf4" android:textSize="18sp" android:textStyle="bold"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:background="@android:color/transparent"
                android:text="@string/add"
                android:textColor="#f42970" android:textSize="18sp" android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>